Fix font weight on ios by removing system-ui as a primary font for now

--- a/assets/baseof/typography.scss
+++ b/assets/baseof/typography.scss
@@ -1,6 +1,6 @@
 html {
-    font-size: 16px;
-    font-family: system-ui, Arial,sans-serif;
+    font-size: 17px;
+    font-family: Arial,sans-serif;
     line-height: 1.6;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -25,7 +25,7 @@ em {
 }
 
 pre, code {
-  font-family: ui-monospace, monospace, Courier;
+  font-family: Courier, ui-monospace, monospace;
 }
 
 @font-face {
